force-app/main/default/objects/Account/fields/Office_No__c.field-meta.xml
<CustomField>
    <fullName>Office_No__c</fullName>
    <label>Office No.</label>
    <type>Phone</type>
</CustomField>