force-app/main/default/objects/Account/fields/Old_Agreement_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Agreement_Created_Date__c</fullName>
    <label>Old Agreement Created Date</label>
    <type>Date</type>
</CustomField>