force-app/main/default/objects/Account/fields/Old_Channel_Relationship_Head__c.field-meta.xml
<CustomField>
    <fullName>Old_Channel_Relationship_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Channel Relationship Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsniW9</relationshipName>
    <type>Lookup</type>
</CustomField>