force-app/main/default/objects/Account/fields/Old_Emirates_ID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Emirates_ID_Expiry_Date__c</fullName>
    <label>Old Emirates ID Expiry Date</label>
    <type>Date</type>
</CustomField>