force-app/main/default/objects/Account/fields/Old_Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Passport_Expiry_Date__c</fullName>
    <label>Old Passport Expiry Date</label>
    <type>Date</type>
</CustomField>