force-app/main/default/objects/Account/fields/Old_Trade_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Trade_License_Expiry_Date__c</fullName>
    <label>Old Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>