force-app/main/default/objects/Account/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <label>Office Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>