force-app/main/default/objects/Account/fields/Passport_Copy__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy</label>
    <type>Checkbox</type>
</CustomField>