force-app/main/default/objects/Account/fields/Passport_Copy_of_Authorized_Signatory_De__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_of_Authorized_Signatory_De__c</fullName>
    <label>Passport Copy of Authorized Signatory De</label>
    <length>255</length>
    <type>Text</type>
</CustomField>