force-app/main/default/objects/Account/fields/Phone_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Phone_Correspondence__c</fullName>
    <label>Phone Correspondence</label>
    <type>Phone</type>
</CustomField>