force-app/main/default/objects/Account/fields/Phone_Permanent__c.field-meta.xml
<CustomField>
    <fullName>Phone_Permanent__c</fullName>
    <label>Phone Permanent</label>
    <type>Phone</type>
</CustomField>