force-app/main/default/objects/Account/fields/POA_Name__c.field-meta.xml
<CustomField>
    <fullName>POA_Name__c</fullName>
    <label>POA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>