force-app/main/default/objects/Account/fields/Presales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Presales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>