force-app/main/default/objects/Account/fields/Primary_Mobile_Number_E__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number_E__c</fullName>
    <label>Primary Mobile Number (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>