force-app/main/default/objects/Account/fields/Primary_Mobile_Number_M__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number_M__c</fullName>
    <label>Primary Mobile Number (M)</label>
    <type>TextArea</type>
</CustomField>