force-app/main/default/objects/Account/fields/Primary_POA_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_POA_Email__c</fullName>
    <label>Primary POA Email</label>
    <type>Email</type>
</CustomField>