force-app/main/default/objects/Account/fields/Primary_POA_Email_E__c.field-meta.xml
<CustomField>
    <fullName>Primary_POA_Email_E__c</fullName>
    <label>Primary POA Email (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>