force-app/main/default/objects/Account/fields/Primary_POA_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Primary_POA_Email_M__c</fullName>
    <label>Primary POA Email (M)</label>
    <type>TextArea</type>
</CustomField>