force-app/main/default/objects/Account/fields/Primary_POA_Mobile_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_POA_Mobile_Country__c</fullName>
    <label>Primary POA Mobile Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>