force-app/main/default/objects/Account/fields/Primary_POA_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_POA_Mobile_Number__c</fullName>
    <label>Primary POA Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>