force-app/main/default/objects/Account/fields/priority_bucket__c.field-meta.xml
<CustomField>
    <fullName>priority_bucket__c</fullName>
    <formula>if( (DATEVALUE( Time_of_New_Enquiry__c ) &lt;= DATE(2020,01,13) ||   ISBLANK(Time_of_New_Enquiry__c )) , &apos;OLD RECORDS&apos;,
if(is_serviced__c == false, &apos;REENQUIRY&apos;, &apos;NONE&apos;)
)</formula>
    <label>priority bucket</label>
    <type>Text</type>
</CustomField>