force-app/main/default/objects/Account/fields/PropStrength__Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Advance_Amount__c</fullName>
    <label>Advance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>