force-app/main/default/objects/Account/fields/PropStrength__Associated_Projects__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Associated_Projects__c</fullName>
    <description>This account is associated with these projects.</description>
    <inlineHelpText>This account is associated with these projects.</inlineHelpText>
    <label>Associated Projects</label>
    <length>200</length>
    <type>Text</type>
</CustomField>