force-app/main/default/objects/Account/fields/PropStrength__Associated_Projects_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Associated_Projects_for_Reports__c</fullName>
    <formula>IF(RIGHT(PropStrength__Associated_Projects__c, 1) = &quot;,&quot;, LEFT(PropStrength__Associated_Projects__c, (LEN(PropStrength__Associated_Projects__c) - 1)), PropStrength__Associated_Projects__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Projects for Reports</label>
    <type>Text</type>
</CustomField>