force-app/main/default/objects/Account/fields/PropStrength__Benficiary_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Benficiary_Bank_Name__c</fullName>
    <label>Benficiary Bank Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>