force-app/main/default/objects/Account/fields/PropStrength__Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Broker_Code__c</fullName>
    <label>Broker Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>