force-app/main/default/objects/Account/fields/PropStrength__Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Broker_Type__c</fullName>
    <label>Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <label>Channel Partner</label>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>