force-app/main/default/objects/Account/fields/PropStrength__Income_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Income_Tax_Registration_Number__c</fullName>
    <label>Income Tax Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>