force-app/main/default/objects/Account/fields/PropStrength__Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Legal_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Case Pending</label>
    <type>Checkbox</type>
</CustomField>