force-app/main/default/objects/Account/fields/PropStrength__MICR_Code__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__MICR_Code__c</fullName>
    <label>MICR Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>