force-app/main/default/objects/Account/fields/PropStrength__Registration_License_Number__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Registration_License_Number__c</fullName>
    <label>Registration License Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>