force-app/main/default/objects/Account/fields/PropStrength__Running_TDS__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Running_TDS__c</fullName>
    <label>Running TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>