force-app/main/default/objects/Account/fields/PropStrength__Service_Tax_No__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Service_Tax_No__c</fullName>
    <label>Service Tax No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>