force-app/main/default/objects/Account/fields/Qualified_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Sale_Value__c</fullName>
    <label>Qualified Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>