force-app/main/default/objects/Account/fields/Qualified_Sales_Value_Last_year__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Sales_Value_Last_year__c</fullName>
    <label>Qualified Sales Value Last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>