force-app/main/default/objects/Account/fields/Ready_for_NICE__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_NICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for NICE</label>
    <type>Checkbox</type>
</CustomField>