force-app/main/default/objects/Account/fields/Record_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountsj4Pi</relationshipName>
    <type>Lookup</type>
</CustomField>