force-app/main/default/objects/Account/fields/Registration_License__c.field-meta.xml
<CustomField>
    <fullName>Registration_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration License</label>
    <type>Checkbox</type>
</CustomField>