force-app/main/default/objects/Account/fields/Registration_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>