force-app/main/default/objects/Account/fields/Renewal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Record_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Record Id</label>
    <referenceTo>Broker_Renewal__c</referenceTo>
    <relationshipLabel>Broker Account</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>