force-app/main/default/objects/Account/fields/Renewal_Record_Old__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Record_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Record Old</label>
    <referenceTo>Broker_Renewal__c</referenceTo>
    <relationshipLabel>Accounts (Renewal Record Old)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>