force-app/main/default/objects/Account/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Initiated</fullName>
            </value>
            <value>
                <fullName>Renewal In Progress</fullName>
            </value>
            <value>
                <fullName>Renewal Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>