force-app/main/default/objects/Account/fields/Rera_Number_Doc__c.field-meta.xml
<CustomField>
    <fullName>Rera_Number_Doc__c</fullName>
    <formula>RERA_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rera Number Doc</label>
    <type>Text</type>
</CustomField>