force-app/main/default/objects/Account/fields/RERA_registration_number__c.field-meta.xml
<CustomField>
    <fullName>RERA_registration_number__c</fullName>
    <label>RERA registration number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>