force-app/main/default/objects/Account/fields/Residential_Street__c.field-meta.xml
<CustomField>
    <fullName>Residential_Street__c</fullName>
    <label>Address 1 and 2 (R)</label>
    <type>TextArea</type>
</CustomField>