force-app/main/default/objects/Account/fields/Residential_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Residential_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code (R)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>