force-app/main/default/objects/Account/fields/S_PReason_for_Purchase__c.field-meta.xml
<CustomField>
    <fullName>S_PReason_for_Purchase__c</fullName>
    <label>Reason For Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>