force-app/main/default/objects/Account/fields/S_Zone_R__c.field-meta.xml
<CustomField>
    <fullName>S_Zone_R__c</fullName>
    <label>Zone (R)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Suburb_R__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NAVI MUMBAI</fullName>
            </value>
            <value>
                <fullName>SOUTH CENTRAL</fullName>
            </value>
            <value>
                <fullName>EASTERN SUBURBS</fullName>
            </value>
            <value>
                <fullName>CENTRAL SUBURBS</fullName>
            </value>
            <value>
                <fullName>SOUTH MUMBAI</fullName>
            </value>
            <value>
                <fullName>THANE</fullName>
            </value>
            <value>
                <fullName>WESTERN SUBURBS</fullName>
            </value>
            <value>
                <fullName>FAR WESTERN</fullName>
            </value>
            <value>
                <fullName>FAR EASTERN</fullName>
            </value>
            <value>
                <fullName>WESTERN MUM - BKC</fullName>
            </value>
            <value>
                <fullName>WESTERN MUMBAI - MAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>