force-app/main/default/objects/Account/fields/Sales_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesManager</relationshipName>
    <type>Lookup</type>
</CustomField>