force-app/main/default/objects/Account/fields/SC_Id__c.field-meta.xml
<CustomField>
    <fullName>SC_Id__c</fullName>
    <label>SC Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>