force-app/main/default/objects/Account/fields/Secondary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_Number__c</fullName>
    <label>Secondary Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>