force-app/main/default/objects/Account/fields/Secondary_POA_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Email__c</fullName>
    <label>Secondary POA Email</label>
    <type>Email</type>
</CustomField>