force-app/main/default/objects/Account/fields/Secondary_POA_Email_E__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Email_E__c</fullName>
    <label>Secondary POA Email (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>