force-app/main/default/objects/Account/fields/Secondary_POA_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Email_M__c</fullName>
    <label>Secondary POA Email (M)</label>
    <type>TextArea</type>
</CustomField>