force-app/main/default/objects/Account/fields/Secondary_POA_Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Mobile_Country_Code__c</fullName>
    <label>Secondary POA Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_With_Codes</valueSetName>
    </valueSet>
</CustomField>