force-app/main/default/objects/Account/fields/Secondary_POA_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Mobile_Number__c</fullName>
    <label>Secondary POA Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>