force-app/main/default/objects/Account/fields/Secondary_POA_Mobile_Number_M__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POA_Mobile_Number_M__c</fullName>
    <label>Secondary POA Mobile Number (M)</label>
    <type>TextArea</type>
</CustomField>