force-app/main/default/objects/Account/fields/Send_Policy_Mandate_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_Policy_Mandate_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Policy Mandate Letter</label>
    <type>Checkbox</type>
</CustomField>